# libsignalsampler

./: CMakeLists.txt  CONTRIBUTING.md  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_suggestion.md
.github/workflows/: coverage.yml  main.yml
benchmark/: CMakeLists.txt
benchmark/source/: sampler-benchmark.cpp  signalsampler-benchmark.cpp
include/signalsampler/: backtrace.hpp  sampler.hpp  sampler.impl.hpp
test/: CMakeLists.txt
test/include/: signalsampler-test.hpp
test/source/: sampler-test.cpp  signalsampler-test.cpp
